fixed overlap when shrinking width

--- a/style.css
+++ b/style.css
@@ -37,15 +37,16 @@ li {
     padding: 0;
     background-color: transparent;
     align-self: center;
-    width: 6vw;
+    align-content: center;
+    width: 6rem;
+    flex-shrink: 0;
 }
 
 li:hover {
     font-weight: bold;
     background-color: #3882F6;
     border-radius: 1vh;
-    height: 4vh;
-    padding-top: 2vh;
+    height: 6vh;
 }
 .content-1 {
     display: flex;
@@ -144,7 +145,9 @@ img {
     width: 12vw;
     height: 20vh;
 }
-
+.card {
+    min-width: 8rem;
+}
 .card .subtext {
     text-align: center;
     width: 12vw;
